# azure-ai

./: .gitignore  README.md  app.py  pyproject.toml  speech_recognizer.py
assets/: style.css
